# campo-estatico-mdf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  genindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app_streamlit/: streamlit_app.py
app_streamlit/pages/: 1_Documentacion.py
campo_estatico_mdf/: __init__.py  solver.py
campo_estatico_mdf.egg-info/: PKG-INFO  SOURCES.txt
docs/: .buildinfo  api_reference.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  teoria.html  tutorial.html
docs/.doctrees/: api_reference.doctree  environment.pickle  index.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  objects.inv  searchindex.js  teoria.html  tutorial.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  teoria.doctree  tutorial.doctree
docs/_build/html/_modules/campo_estatico_mdf/: solver.html
docs/_modules/: index.html
docs/_modules/campo_estatico_mdf/: solver.html
docs/_sources/: api_reference.rst.txt  index.rst.txt  teoria.rst.txt  tutorial.rst.txt
docs/_static/: documentation_options.js
docs/source/: api_reference.rst  conf.py  index.rst  tutorial.rst
examples/: placa_basica.py
tests/: test_convergence.py  test_e_field_linear.py  test_solver.py  test_trivial_bc.py
